# server/src/module/system/dict/dict.service.ts
@@ -44,9 +44,9 @@ export class DictService {
       entity.andWhere(`entity.dictType LIKE "%${query.dictType}%"`);
     }
 
-    if (query.status) {
-      entity.andWhere('entity.status = :status', { status: query.status });
-    }
+    // if (query.status) {
+    //   entity.andWhere('entity.status = :status', { status: query.status });
+    // }
 
     if (query.params?.beginTime && query.params?.endTime) {
       entity.andWhere('entity.createTime BETWEEN :start AND :end', { start: query.params.beginTime, end: query.params.endTime });
@@ -80,7 +80,11 @@ export class DictService {
 
   // 字典数据
   async createDictData(createDictDataDto: CreateDictDataDto) {
-    await this.sysDictDataEntityRep.save(createDictDataDto);
+    await this.sysDictDataEntityRep.save({
+      ...createDictDataDto,
+      listClass: createDictDataDto.listClass ?? '',
+      cssClass: createDictDataDto.cssClass ?? '',
+    });
     return ResultData.ok();
   }
 
@@ -180,7 +184,7 @@ export class DictService {
    * 导出字典数据为xlsx文件
    * @param res
    */
-  async exportData(res: Response, body: ListDictType) {
+  async exportData(res: Response, body: ListDictData) {
     delete body.pageNum;
     delete body.pageSize;
     const list = await this.findAllData(body);
@@ -188,9 +192,11 @@ export class DictService {
       sheetName: '字典数据',
       data: list.data.list,
       header: [
-        { title: '字典主键', dataIndex: 'dictCode' },
-        { title: '字典名称', dataIndex: 'dictLabel' },
-        { title: '字典类型', dataIndex: 'dictValue' },
+        { title: '字典编码', dataIndex: 'dictCode' },
+        { title: '字典标签', dataIndex: 'dictLabel' },
+        { title: '字典键值', dataIndex: 'dictValue' },
+        { title: '字典类型', dataIndex: 'dictType' },
+        { title: '状态', dataIndex: 'status' },
         { title: '备注', dataIndex: 'remark' },
       ],
     };
@@ -224,7 +230,7 @@ export class DictService {
    */
   async loadingDictCache() {
     const entity = this.sysDictTypeEntityRep.createQueryBuilder('entity');
-    entity.leftJoinAndMapMany('entity.dictTypeList', SysDictDataEntity, 'dictType', 'dictType.dictType = entity.dictType');
+    entity.leftJoinAndMapMany('entity.dictTypeList', SysDictDataEntity, 'dictData', 'dictData.dictType = entity.dictType');
     const list = await entity.getMany();
     list.forEach((item: any) => {
       if (item.dictType) {
